--- a/input.css
+++ b/input.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.html {
+    scroll-behavior: smooth;
+}
+
+.card {
+    height: 750px;
+    width: 300px;
+}
